# UPENN_CIS6500_Final_Proj

./: .gitignore  BOOST_FIX.md  CHARTS_COMPLETE.txt  CMakeLists.txt  DATA_ISSUE.md  FINAL_SUMMARY.md  GETTING_STARTED.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.txt  PHASE4_COMPLETE.md  PHASE4_SUMMARY.txt  PLOTS_SUMMARY.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  README.md  REPORT.md  REPORT_SUMMARY.txt
include/benchmark/: benchmark.h  workload_generator.h
include/indexes/: base_index.h  flood_index.h  kdtree_index.h  rtree_index.h  zorder_index.h
plots/: README.md
src/: main.cpp
src/benchmark/: benchmark.cpp  run_benchmark.cpp  workload_generator.cpp
src/indexes/: base_index.cpp  flood_index.cpp  kdtree_index.cpp  rtree_index.cpp  zorder_index.cpp
tests/: simple_test.cpp  test_indexes.cpp  test_main.cpp
tools/: convert_nyc_data_with_zones.py  convert_parquet_to_csv.py  create_zone_coordinates.py  download_taxi_zones.py  generate_plots.py  process_nyc_data.cpp
